use correct encoding for the errormessage that comes from the OS

BUG:142325

svn path=/branches/KDE/3.5/kdelibs/; revision=642895